[gd_scene load_steps=3 format=3 uid="uid://cbn0yft08lqek"]

[ext_resource type="Script" uid="uid://b71rfo2wf3gjx" path="res://scripts/killzone.gd" id="1_xlapc"]
[ext_resource type="AudioStream" uid="uid://dw4rtcc5mdjum" path="res://assets/sounds/die.mp3" id="2_kl8fp"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_xlapc")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="DyingSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_kl8fp")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
